# fcompile

./: .gitignore  README.md  fcompile
chatglm/: README.md  modeling_chatglm.py
cpp/hbm1206/: diff.sh  install.sh
cpp/kvcache/: gen_data.py  kvcache_cir.py  server.py  sim_kvcache.py
cpp/sim_driver/: CMakeLists.txt  MVM_BN_4096x128.h  MVM_BN_4096x4096.h  Makefile  (+2 more)
genregs/: .gitignore  MyGLM2.py  chatglm2.py  chatglm2_debug.py  clock_models.py  cogvlm2.py  custom_GLM2.py  debug_chatglm2.py  gptq_layer.py  llama2.py  main.py  source.h  sparse_main.py  tasks_test.py  wt_trans.py
include/: CNN_defines.vh  tasks_driver_MVM.vh  tasks_driver_MVM_and_Gelu.vh  tasks_driver_TRANSPOSE.vh  tasks_driver_Vit_conv0.vh  tasks_driver_activation.vh  tasks_driver_conv_mp.vh  tasks_driver_mp_conv_res.vh
mlir-tutorial/: TpuOps.td
mlir-tutorial/tdliron/: CMakeLists.txt
mlir-tutorial/tdliron/include/: CMakeLists.txt
mlir-tutorial/tdliron/include/interface/: ShapeInterface.h  ShapeInterface.td
mlir-tutorial/tdliron/include/tdliron/: CMakeLists.txt  Passes.h  Passes.td  Tdliron.h  Tdliron.td
mlir-tutorial/tdliron/lib/: CMakeLists.txt  tdliron.cpp
mlir-tutorial/tdliron/lib/tdliron/: AddressAssign.cc  InferShape.cc  constant.cc  mvm.cc
mlir-tutorial/tdliron/tdliron-opt/: CMakeLists.txt  tdliron-opt.cpp
python/: attention.py  check.py  main.py  models.py
sim/: Makefile
tb/: testbench_LN.sv  testbench_MVM.sv  testbench_MVM_and_Gelu.sv  testbench_TRANSPOSE.sv  testbench_activation.sv  testbench_conv_mp.sv  testbench_mp_conv_res.sv  testbench_softmax.sv
template/: main.c
(+563 files in other folders)
